# ideation-agent-scoring-evaluator

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: run.yml
src/ideation_agent_scoring_evaluator/: __init__.py  agent.py  main.py  memory.py
src/ideation_agent_scoring_evaluator/prompts/: system.md
tests/: test_agent.py
